// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderForFeishu > renders dropped day snapshot 1`] = `
"# 学习闭环日报 · 2026-04-27

> 生成时间：2026-04-27T11:00:00.000Z
> Reflect: events=220 · 新增=1 · 丢弃=2 · 耗时=2.8s

## 🎯 行动建议

1. 检查 dropped 原因是否需要调阈值。

## 🆕 今日新增候选

### 1. Candidate

📅 2026-04-27 · 待审

## 📊 总览

- **采集事件：** 220
- **新增候选：** 1

## ⚠️ 被丢弃的候选

- duplicate: 1
- low_signal: 1

📁 完整报告：/home/mcdowell/open-claw-output/code/learning-loop-reporter/fixtures/with-dropped.md
"
`;

exports[`renderForFeishu > renders empty day snapshot 1`] = `
"# 学习闭环日报 · 2026-04-27

> 生成时间：2026-04-27T09:00:00.000Z
> Reflect: events=128 · 新增=0 · 丢弃=0 · 耗时=2.1s

## 🎯 行动建议

1. 明天继续观察。

## 🆕 今日新增候选

今日无新增候选。

## 📊 总览

- **采集事件：** 128
- **新增候选：** 0

## ⚠️ 被丢弃的候选

无丢弃候选。

📁 完整报告：/home/mcdowell/open-claw-output/code/learning-loop-reporter/fixtures/empty-day.md
"
`;

exports[`renderForFeishu > renders sample report snapshot 1`] = `
"# 学习闭环日报 · 2026-04-27

> 生成时间：2026-04-27T08:42:41.404Z
> Reflect: events=3002 · 新增=3 · 丢弃=0 · 耗时=21.8s

## 🎯 行动建议

1. review 新候选（命令：\`openclaw-learn review show <ID>\`）
2. 处理超期未审：\`openclaw-learn review list --status pending\`
3. 查看完整候选：\`ls ~/.openclaw/workspace/learn/candidates/\`

## 🆕 今日新增候选

### 1. Heartbeat Gate Misuse \`heartbeat_gate_misuse\`

📅 2026-04-27 · 待审
**问题：** 用户要求读取 HEARTBEAT.md 并在无任务时回 HEARTBEAT_OK
**规则：** 在每次指令到来时先检查 HEARTBEAT.md

## 📊 总览

- **采集事件：** 3002
- **新增候选：** 3
- **被丢弃：** 0
- **候选库总数：** 14（待审 14）

## ⚠️ 被丢弃的候选

无丢弃候选。

<details><summary>📚 候选库快照（共 14 条）</summary>

### 🟡待审 (14) ⚠️

\`\`\`
标题                                 创建于（龄期） 
-----------------------------------  ---------------
文档同步失败                         2026-04-25 (2d)
渐进式推迟原则                       2026-04-25 (2d)
测试结果可信度与环境隔离             2026-04-25 (2d)
模型路由故障识别                     2026-04-26 (1d)
凭证路径不一致                       2026-04-26 (1d)
发版质量保障                         2026-04-26 (1d)
Cron Safety Pause Compliance         2026-04-27 (0d)
Reporter Wrapper Atomicity           2026-04-27 (0d)
Avoid Heartbeat Noise Messaging      2026-04-27 (0d)
Heartbeat Rule Adherence             2026-04-27 (0d)
Subagent Output Format Exactness     2026-04-27 (0d)
Heartbeat Gate Misuse                2026-04-27 (0d)
Subagent Output Format Enforcement   2026-04-27 (0d)
Pause On Blocking Clear Instruction  2026-04-27 (0d)
\`\`\`

📊 候选库共 14 条。
🔍 完整列表：openclaw-learn review list（或见 learn/candidates/）

</details>

📁 完整报告：/home/mcdowell/open-claw-output/code/learning-loop-reporter/fixtures/sample-daily-report.md
"
`;

exports[`renderForFeishu > renders stale day snapshot 1`] = `
"# 学习闭环日报 · 2026-04-27

> 生成时间：2026-04-27T10:00:00.000Z
> Reflect: events=320 · 新增=1 · 丢弃=0 · 耗时=3.6s

## 🎯 行动建议

1. 今天先 review 超期项。

## 🆕 今日新增候选

### 1. Some Candidate

📅 2026-04-27 · 待审

## 📊 总览

- **采集事件：** 320
- **新增候选：** 1

## ⚠️ 被丢弃的候选

无丢弃候选。

📁 完整报告：/home/mcdowell/open-claw-output/code/learning-loop-reporter/fixtures/with-stale.md
"
`;
